...
  var id: Int {
    rawValue
  }

  var title: String {
    switch self {
    case .today: return "Today"
    case .lists: return "Lists"
    case .settings: return "Profile"
    }
  }

  var icon: String {
...
